# recognise

./: .gitignore  .travis.yml  Changelog  LICENSE  Makefile  Makefile.am  README.md  config.status  configure  configure.ac  demo-algorithm.py  get-cl.sh  get-deps.sh  get-intel-ocl.sh  normalize_image.py  requirements.txt  runner.sh  setup-debian.sh
coming/: index.html
coming/css/: style.css
doc/man/: recogn
man/: recogn
src/: .recognrc  FaceRec.cpp  ansi_colors.h  app.cpp  cam.cpp  camera_instance.cpp  cl-cores.cpp  cl-device_info.cpp  cl.cpp  cl_cv.cpp  config_parser.h  config_parser.h.gch  face-rec.cpp  gcc_attributes.h  gpu-cl_cv.cpp  image_read.cpp  logger_syslog.h  objectDetection.cpp  recogniser.cpp  signal_r.h  track.cpp  webcam_recognise.cpp
src/app/: TODO.md  console.py  recogn.py  run.py  unit
src/cl/: Makefile  main.c  vector_add_kernel.cl
src/db/: db.sql  insert.cpp  postgres.cpp  postgres_setDb.cpp  postgres_table.cpp  select.cpp  update  update.cpp
src/inih/: test.c  unittest.c
src/observer/: CMakeLists.txt  ImageUtils.h  ImageUtils_0.7.cpp  Makefile  README.txt  detectObject.cpp  detectObject.h  main.cpp  preprocessFace.cpp  preprocessFace.h  recognition.cpp  recognition.h
src/omp/: openMP.c
src/openMP/: openMP-for.c  openMP.c  openMP2.c  openMP3.c
src/plate_r/: CMakeCache.txt  Makefile  OCR.cpp  README.txt  cmake_install.cmake
src/plate_rec/: DetectRegions.cpp  DetectRegions.h  Makefile  OCR.cpp  OCR.h  Plate.cpp  Plate.h  README.txt  SVM.xml  evalOCR.cpp  main.cpp  trainOCR.cpp  trainSVM.cpp
src/redis/: async_r.c  redis  (+2 more)
(+12 files in other folders)
